Update .po files

--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:07+0900\n"
+"POT-Creation-Date: 2021-03-11 15:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -786,7 +786,7 @@ msgstr "`QuarkusCqlSession` を使用すると、Quarkus や Mutiny と統合さ
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:410
 #, fuzzy
-msgid "If you're not familiar with Mutiny, read the link:https://quarkus.io/guides/getting-started-reactive[Getting Started with Reactive guide] first."
+msgid "If you're not familiar with Mutiny, read the link:getting-started-reactive[Getting Started with Reactive guide] first."
 msgstr "Mutinyに慣れていない場合は、まずGet link:https://quarkus.io/guides/getting-started-reactive[ting Started with Reactiveガイド] を読んでください。"
 
 #. type: Plain text
