--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:05+0900\n"
+"POT-Creation-Date: 2021-03-11 15:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -954,7 +954,7 @@ msgstr "2つ目の方法は、 `quarkus.hibernate-orm.database.generation=update
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:448
 #, fuzzy
-msgid "The third approach is to use `quarkus.hibernate-orm.database.generation=none`.  This approach is best when you are working on a copy of the production data but want to fully control the schema evolution.  Or if you use a database schema migration tool like https://quarkus.io/guides/flyway[Flyway]."
+msgid "The third approach is to use `quarkus.hibernate-orm.database.generation=none`.  This approach is best when you are working on a copy of the production data but want to fully control the schema evolution.  Or if you use a database schema migration tool like link:flyway[Flyway]."
 msgstr "3つ目のアプローチは `quarkus.hibernate-orm.database.generation=none` を使用することです。このアプローチは、本番データのコピーで作業しているが、スキーマの進化を完全に制御したい場合に最適です。または、 link:https://quarkus.io/guides/flyway[Flyway] のようなデータベーススキーマ移行ツールを使用する場合。"
 
 #. type: Plain text
@@ -972,7 +972,7 @@ msgstr "本番環境では、 `quarkus.hibernate-orm.database.generation` `drop-
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:459
 #, fuzzy
-msgid "These approaches become really powerful when combined with Quarkus configuration profiles.  You can define different https://quarkus.io/guides/config#configuration-profiles[configuration profiles] to select different behaviors depending on your environment.  This is great because you can define different combinations of Hibernate ORM properties matching the development style you currently need."
+msgid "These approaches become really powerful when combined with Quarkus configuration profiles.  You can define different link:config#configuration-profiles[configuration profiles] to select different behaviors depending on your environment.  This is great because you can define different combinations of Hibernate ORM properties matching the development style you currently need."
 msgstr "これらのアプローチは、Quarkusの設定プロファイルと組み合わせると非常に強力になります。異なる link:https://quarkus.io/guides/config#configuration-profiles[設定プロファイル] を定義して、環境に応じて異なる動作を選択することができます。現在必要としている開発スタイルに合ったHibernate ORMプロパティーのさまざまな組み合わせを定義できるので、これは素晴らしいことです。"
 
 #. type: Block title
@@ -1837,7 +1837,7 @@ msgstr "アプリケーションの設定"
 #. type: delimited block =
 #: upstream/_guides/hibernate-orm.adoc:871
 #, fuzzy
-msgid "In general it is not possible to use the Hibernate ORM database generation feature in conjunction with a multitenancy setup.  Therefore you have to disable it and you need to make sure that the tables are created per schema.  The following setup will use the link:https://quarkus.io/guides/flyway[Flyway] extension to achieve this goal."
+msgid "In general it is not possible to use the Hibernate ORM database generation feature in conjunction with a multitenancy setup.  Therefore you have to disable it and you need to make sure that the tables are created per schema.  The following setup will use the link:flyway[Flyway] extension to achieve this goal."
 msgstr "一般的に、マルチテナンシー設定と組み合わせてHibernate ORMデータベース生成機能を使用することはできません。したがって、それを無効にして、テーブルがスキーマごとに作成されることを確認する必要があります。以下のセットアップでは、この目標を達成するために link:https://quarkus.io/guides/flyway[Flyway] エクステンションを使用します。"
 
 #. type: Title ====
