--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-11 02:12+0000\n"
+"POT-Creation-Date: 2021-03-11 15:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1171,7 +1171,7 @@ msgstr "PostgreSQLおよびMariaDB/MySQLクライアントは、UNIXドメイン
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:584
 #, fuzzy
-msgid "First make sure that https://quarkus.io/guides/vertx#native-transport[native transport support] is enabled."
+msgid "First make sure that link:vertx#native-transport[native transport support] is enabled."
 msgstr "まず、 link:https://quarkus.io/guides/vertx#native-transport[ネイティブトランスポートのサポートが] 有効になっていることを確認します。"
 
 #. type: Plain text
