--- a/l10n/po/ja_JP/_guides/security-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-testing.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-02-12 18:07+0000\n"
+"POT-Creation-Date: 2021-03-11 15:13+0000\n"
 "PO-Revision-Date: 2021-02-13 02:59+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -43,7 +43,9 @@ msgstr "セキュリティーをテストするために link:security-propertie
 
 #. type: Plain text
 #: upstream/_guides/security-testing.adoc:18
-msgid "For example, the following configuration will allow for configuring the users in both the production where OAuth2 is required and development modes using link:https://quarkus.io/guides/config#configuration-profiles[Configuration Profiles]."
+#, fuzzy
+#| msgid "For example, the following configuration will allow for configuring the users in both the production where OAuth2 is required and development modes using link:https://quarkus.io/guides/config#configuration-profiles[Configuration Profiles]."
+msgid "For example, the following configuration will allow for configuring the users in both the production where OAuth2 is required and development modes using link:config#configuration-profiles[Configuration Profiles]."
 msgstr "例えば、以下の構成では、OAuth2が必要な本番モードと開発モードの両方で link:https://quarkus.io/guides/config#configuration-profiles[Configuration Profiles]を使用してユーザーを設定することができます。"
 
 #. type: delimited block -
