--- a/l10n/po/ja_JP/_guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-web.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:30+0900\n"
+"POT-Creation-Date: 2021-03-11 15:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -471,7 +471,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/spring-web.adoc:271
 #, fuzzy
-msgid "Also see link:https://quarkus.io/guides/openapi-swaggerui[the OpenAPI Guide]"
+msgid "Also see link:openapi-swaggerui[the OpenAPI Guide]"
 msgstr "link:https://quarkus.io/guides/openapi-swaggerui[OpenAPIガイド] も参照してください。"
 
 #. type: Title ===
@@ -605,7 +605,7 @@ msgstr "SwaggerのUIを使う"
 #. type: Plain text
 #: upstream/_guides/spring-web.adoc:373
 #, fuzzy
-msgid "Swagger UI is included by default when running in `Dev` or `Test` mode, and can optionally added to `Prod` mode.  See link:https://quarkus.io/guides/openapi-swaggerui#use-swagger-ui-for-development[the Swagger UI] Guide for more details."
+msgid "Swagger UI is included by default when running in `Dev` or `Test` mode, and can optionally added to `Prod` mode.  See link:openapi-swaggerui#use-swagger-ui-for-development[the Swagger UI] Guide for more details."
 msgstr "Swagger UIは、 `Dev` または `Test` モードで実行しているときにデフォルトで含まれており、オプションで `Prod` モードに追加することができます。詳細については、 link:https://quarkus.io/guides/openapi-swaggerui#use-swagger-ui-for-development[Swagger] UIガイドを参照してください。"
 
 #. type: Plain text
