--- a/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:05+0900\n"
+"POT-Creation-Date: 2021-03-11 15:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -97,7 +97,7 @@ msgstr "Apache Maven {maven-version}"
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:39
 #, fuzzy
-msgid "Having completed the link:https://quarkus.io/guides/getting-started-testing[Testing your application guide]"
+msgid "Having completed the link:getting-started-testing[Testing your application guide]"
 msgstr "link:https://quarkus.io/guides/getting-started-testing[アプリケーションガイドのテスト] が完了したら"
 
 #. type: Title ==
