--- a/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-health-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-health-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 16:17+0000\n"
+"POT-Creation-Date: 2021-03-11 15:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The path where Health UI is available. The value `/` is not allowed as it blocks the application from serving anything else.\n"
+"The path where Health UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.\n"
 "--"
 msgstr ""
 
