--- a/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-smallrye-health-small-rye-health-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 16:17+0000\n"
+"POT-Creation-Date: 2021-03-11 15:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -49,7 +49,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Root path for health-checking endpoints.\n"
+"Root path for health-checking endpoints. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.\n"
 "--"
 msgstr ""
 
@@ -78,7 +78,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The relative path of the liveness health-checking endpoint.\n"
+"The relative path of the liveness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.\n"
 "--"
 msgstr ""
 
@@ -96,7 +96,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The relative path of the readiness health-checking endpoint.\n"
+"The relative path of the readiness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.\n"
 "--"
 msgstr ""
 
@@ -114,7 +114,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The relative path of the health group endpoint.\n"
+"The relative path of the health group endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.\n"
 "--"
 msgstr ""
 
@@ -132,7 +132,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The relative path of the wellness health-checking endpoint.\n"
+"The relative path of the wellness health-checking endpoint. By default, this value will be resolved as a path relative to `$++{++quarkus.smallrye-health.rootPath++}++`.\n"
 "--"
 msgstr ""
 
@@ -156,7 +156,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The path where Health UI is available. The value `/` is not allowed as it blocks the application from serving anything else.\n"
+"The path where Health UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.\n"
 "--"
 msgstr ""
 
