--- a/l10n/po/ja_JP/_generated-config/config/quarkus-swagger-ui-swagger-ui-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-swagger-ui-swagger-ui-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 16:18+0000\n"
+"POT-Creation-Date: 2021-03-11 15:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -48,7 +48,7 @@ msgid ""
 "[.description]\n"
 "--\n"
 "The path where Swagger UI is available. \n"
-" The value `/` is not allowed as it blocks the application from serving anything else.\n"
+" The value `/` is not allowed as it blocks the application from serving anything else. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.\n"
 "--"
 msgstr ""
 
