--- a/l10n/po/ja_JP/_guides/blaze-persistence.adoc.po
+++ b/l10n/po/ja_JP/_guides/blaze-persistence.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-02-17 05:07+0000\n"
+"POT-Creation-Date: 2021-03-11 15:13+0000\n"
 "PO-Revision-Date: 2021-02-15 22:43+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -43,7 +43,9 @@ msgstr "Blaze-Persistenceのセットアップと設定"
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:27
-msgid "The extension comes with default producers for `CriteriaBuilderFactory` and `EntityViewManager` that work out of the box given a working Hibernate ORM configuration. For customization, overriding of the default producers is possible via the standard mechanism as documented in the link:{quarkus-home-url}/guides/cdi-reference#default_beans[Quarkus CDI reference].  This is needed if you need to set custom link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/index.html#anchor-configuration-properties[Blaze-Persistence properties]."
+#, fuzzy
+#| msgid "The extension comes with default producers for `CriteriaBuilderFactory` and `EntityViewManager` that work out of the box given a working Hibernate ORM configuration. For customization, overriding of the default producers is possible via the standard mechanism as documented in the link:{quarkus-home-url}/guides/cdi-reference#default_beans[Quarkus CDI reference].  This is needed if you need to set custom link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/index.html#anchor-configuration-properties[Blaze-Persistence properties]."
+msgid "The extension comes with default producers for `CriteriaBuilderFactory` and `EntityViewManager` that work out of the box given a working Hibernate ORM configuration. For customization, overriding of the default producers is possible via the standard mechanism as documented in the link:cdi-reference#default_beans[Quarkus CDI reference].  This is needed if you need to set custom link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/index.html#anchor-configuration-properties[Blaze-Persistence properties]."
 msgstr "このエクステンションには、 `CriteriaBuilderFactory` と `EntityViewManager` のデフォルトのプロデューサーが付属しており、動作する Hibernate ORM 設定があればすぐに動作します。カスタマイズのために、 link:{quarkus-home-url}/guides/cdi-reference#default_beans[Quarkus CDIリファレンス]に記載されている標準的なメカニズムを使用して、デフォルトのプロデューサーをオーバーライドすることができます。これは、カスタムの link:https://persistence.blazebit.com/documentation/entity-view/manual/en_US/index.html#anchor-configuration-properties[Blaze-Persistenceプロパティー]を設定する場合に必要です。"
 
 #. type: Plain text
@@ -135,7 +137,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/blaze-persistence.adoc:77
-msgid "A `CriteriaBuilderFactory` and an `EntityViewManager` will be created based on the configured `EntityManagerFactory` as provided by the link:{quarkus-home-url}/guides/hibernate-orm[Hibernate-ORM extension]."
+#, fuzzy
+#| msgid "A `CriteriaBuilderFactory` and an `EntityViewManager` will be created based on the configured `EntityManagerFactory` as provided by the link:{quarkus-home-url}/guides/hibernate-orm[Hibernate-ORM extension]."
+msgid "A `CriteriaBuilderFactory` and an `EntityViewManager` will be created based on the configured `EntityManagerFactory` as provided by the link:hibernate-orm[Hibernate-ORM extension]."
 msgstr "`CriteriaBuilderFactory` と `EntityViewManager` は、 link:{quarkus-home-url}/guides/hibernate-orm[Hibernate-ORM エクステンション]で提供される設定された `EntityManagerFactory` に基づいて作成されます。"
 
 #. type: Plain text
