--- a/l10n/po/ja_JP/_generated-config/config/quarkus-dev-ui-devmode-console-dev-ui-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-dev-ui-devmode-console-dev-ui-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-dev-ui-devmode-console-dev-ui-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-dev-ui-devmode-console-dev-ui-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-dev-ui-devmode-console-dev-ui-config.adoc:16
