Add machine translation

--- a/l10n/po/ja_JP/_guides/dev-ui.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-ui.adoc.po
@@ -139,13 +139,15 @@ msgstr "Font Awesome Freeアイコンセットを使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:63
+#, fuzzy
 msgid "Note how the paths are specified: `{config:http-path('quarkus.smallrye-openapi.path')}`. This is a special directive that the quarkus dev console understands: it will replace that value with the resolved route named 'quarkus.smallrye-openapi.path'."
-msgstr ""
+msgstr "パスの指定方法に注意してください。 `{config:http-path('quarkus.smallrye-openapi.path')}`.これは、quarkus devコンソールが理解する特別な指示で、その値を「quarkus.smallrye-openapi.path」という名前の解決済みルートに置き換えます。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:65
+#, fuzzy
 msgid "The corresponding non-application endpoint is declared using `.routeConfigKey` to associate the route with a name:"
-msgstr ""
+msgstr "対応する非アプリケーションのエンドポイントは、 `.routeConfigKey` を使って宣言され、ルートと名前が関連付けられます。"
 
 #. type: delimited block -
 #: upstream/_guides/dev-ui.adoc:73
@@ -160,44 +162,51 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:75
+#, fuzzy
 msgid "The configured path is resolved into a valid route."
-msgstr ""
+msgstr "設定されたパスが有効なルートに解決されます。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:76
+#, fuzzy
 msgid "The resolved route path is then associated with the key `quarkus.smallrye-openapi.path`."
-msgstr ""
+msgstr "そして、解決されたルートパスは、キー `quarkus.smallrye-openapi.path` に関連付けられます。"
 
 #. type: Title ==
 #: upstream/_guides/dev-ui.adoc:77
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Path considerations"
-msgstr ""
+msgstr "パスの検討"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:80
+#, fuzzy
 msgid "Paths are tricky business. Keep the following in mind:"
-msgstr ""
+msgstr "道というのは厄介なものです。以下の点に注意してください。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:82
+#, fuzzy
 msgid "Assume your UI will be nested under the dev endpoint. Do not provide a way to customize this without a strong reason."
-msgstr ""
+msgstr "UIがdevエンドポイントの下に入れ子になっていることを想定してください。強い理由がない限り、これをカスタマイズする方法を提供しないでください。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:83
+#, fuzzy
 msgid "Never construct your own absolute paths. Adding a suffix to a known, normalized and resolved path is fine."
-msgstr ""
+msgstr "自分で絶対パスを構築してはいけません。正規化された既知のパスにサフィックスを追加することは問題ありません。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:88
+#, fuzzy
 msgid "Configured paths, like the `dev` endpoint used by the console or the SmallRye OpenAPI path shown in the example above, need to be properly resolved against both `quarkus.http.root-path` and `quarkus.http.non-application-root-path`.  Use `NonApplicationRootPathBuildItem` or `HttpRootPathBuildItem` to construct endpoint routes and identify resolved path values that can then be used in templates."
-msgstr ""
+msgstr "コンソールで使用される `dev` エンドポイントや、上記の例で示されている SmallRye OpenAPI パスなどの設定されたパスは、 `quarkus.http.root-path` と `quarkus.http.non-application-root-path` の両方に対して適切に解決される必要があります。 `NonApplicationRootPathBuildItem` または `HttpRootPathBuildItem` を使用してエンドポイントのルートを構築し、テンプレートで使用できる解決済みのパス値を特定します。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:90
+#, fuzzy
 msgid "The `{devRootAppend}` variable can also be used in templates to construct URLs for static dev console resources, for example:"
-msgstr ""
+msgstr "`{devRootAppend}` 変数は、テンプレートでも使用することができ、例えば、静的なdev consoleリソースのURLを構築することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/dev-ui.adoc:94
@@ -207,8 +216,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:98
+#, fuzzy
 msgid "Refer to the link:all-config#quarkus-vertx-http_quarkus.http.non-application-root-path[Quarkus Vertx HTTP configuration reference] for details on how the non-application root path is configured."
-msgstr ""
+msgstr "非アプリケーションのルートパスの設定方法の詳細については、 link:all-config#quarkus-vertx-http_quarkus.http.non-application-root-path[Quarkus Vertx HTTP設定リファレンス]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-ui.adoc:99
@@ -249,8 +259,9 @@ msgstr "`config:property(name)` 式を使用して、指定されたプロパテ
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:120
+#, fuzzy
 msgid "Reminder: do not use this to retrieve raw configured path values. As shown above, use `{config:http-path(...)}` with a known route configuration key when working with resource paths."
-msgstr ""
+msgstr "注意：設定された生のパス値を取得するためには使用しないでください。上述のように、リソースパスを扱う際には、既知のルート設定キーを持つ `{config:http-path(…​)}` を使用してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-ui.adoc:121
@@ -358,8 +369,9 @@ msgstr "フルページテンプレートへのリンク"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:186
+#, fuzzy
 msgid "Full-page templates for extensions live under a pre-defined `{devRootAppend}/{groupId}.{artifactId}/` directory that is referenced using the `urlbase` template parameter. Using configuration defaults, that would resolve to `/q/dev/io.quarkus.quarkus-cache/`, as an example."
-msgstr ""
+msgstr "拡張機能のフルページテンプレートは、あらかじめ定義された `{devRootAppend}/{groupId}.{artifactId}/` ディレクトリの下に置かれ、 `urlbase` template パラメータで参照されます。設定のデフォルトでは、例として `/q/dev/io.quarkus.quarkus-cache/` となります。"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:188
