--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc.po, 0, 19, 0, 192 ,100%
 l10n/po/ja_JP/_posts/2021-03-11-ja-quarkus-io.adoc.po, 0, 6, 0, 147 ,100%
 l10n/po/ja_JP/_posts/2021-03-04-path-resolution-in-quarkus.adoc.po, 0, 83, 0, 1697 ,100%
 l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po, 0, 15, 0, 145 ,100%
