--- a/l10n/po/ja_JP/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.12.2.Final released - Bugfixes'\n"
@@ -34,16 +34,25 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 1.12.2.Finalリリース - Bugfix'\n"
+"date: 2021-03-11\n"
+"tags: release\n"
+"synopsis: 1.12.2.Finalでは、問題の修正とドキュメントの改善が行われています。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:11
+#, fuzzy
 msgid "1.12.2.Final is a maintenance release fixing bugs and improving the documentation."
-msgstr ""
+msgstr "1.12.2.Finalは、バグの修正とドキュメントの改善を行ったメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:13
+#, fuzzy
 msgid "It is a recommended upgrade for everyone using Quarkus 1.12."
-msgstr ""
+msgstr "これは、Quarkus 1.12を使用しているすべての人に推奨されるアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:15
@@ -58,24 +67,27 @@ msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Two important regressions fixed"
-msgstr ""
+msgstr "2つの重要なリグレッションは、固定"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:21
+#, fuzzy
 msgid "1.12.2.Final fixes two important regressions that were introduced in 1.12.1.Final:"
-msgstr ""
+msgstr "1.12.2.Finalでは、1.12.1.Finalで発生した2つの重要なリグレッションが修正されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:24
+#, fuzzy
 msgid "Building native images on Windows was broken.  We added a CI check to be sure we don't break it again in the future."
-msgstr ""
+msgstr "Windows でのネイティブイメージのビルドが壊れていました。今後、二度と壊れないように、CIチェックを追加しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:25
+#, fuzzy
 msgid "Deploying to OpenShift was also not working properly in 1.12.1.Final."
-msgstr ""
+msgstr "1.12.1.Finalでは、OpenShiftへのデプロイも正常に行われませんでした。"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:26
@@ -85,8 +97,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:29
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.12.2.Final[the full changelog of 1.12.2.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.12.2.Final[1.12.2.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc:30
