Apply translation memory

--- a/l10n/po/ja_JP/_posts/2019-07-25-quarkus-dependency-injection.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-07-25-quarkus-dependency-injection.adoc.po
@@ -186,6 +186,9 @@ msgid ""
 "  @ConfigProperty(name = \"cool\")\n"
 "  String coolProperty;\n"
 msgstr ""
+"  @Inject\n"
+"  @ConfigProperty(name = \"cool\")\n"
+"  String coolProperty;\n"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:78
@@ -200,6 +203,8 @@ msgid ""
 "  @ConfigProperty(name = \"cool\")\n"
 "  String coolProperty;\n"
 msgstr ""
+"  @ConfigProperty(name = \"cool\")\n"
+"  String coolProperty;\n"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:86
@@ -227,13 +232,15 @@ msgid ""
 "@ApplicationScoped\n"
 "public class MyCoolService {\n"
 msgstr ""
+"@ApplicationScoped\n"
+"public class MyCoolService {\n"
 
 #. type: delimited block -
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:98
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:118
 #, no-wrap
 msgid "  private SimpleProcessor processor;\n"
-msgstr ""
+msgstr "  private SimpleProcessor processor;\n"
 
 #. type: delimited block -
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:101
@@ -242,6 +249,8 @@ msgid ""
 "  MyCoolService() { // dummy constructor needed\n"
 "  }\n"
 msgstr ""
+"  MyCoolService() { // dummy constructor needed\n"
+"  }\n"
 
 #. type: delimited block -
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:107
@@ -253,6 +262,11 @@ msgid ""
 "  }\n"
 "}\n"
 msgstr ""
+"  @Inject // constructor injection\n"
+"  MyCoolService(SimpleProcessor processor) {\n"
+"    this.processor = processor;\n"
+"  }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:111
@@ -269,6 +283,10 @@ msgid ""
 "  }\n"
 "}\n"
 msgstr ""
+"  MyCoolService(SimpleProcessor processor) {\n"
+"    this.processor = processor;\n"
+"  }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:126
