--- a/l10n/po/ja_JP/_versions/1.11/guides/README.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/README.adoc.po
@@ -80,7 +80,7 @@ msgstr "プロパティ名"
 #: upstream/_versions/1.11/guides/README.adoc:23
 #, no-wrap
 msgid "Valu"
-msgstr ""
+msgstr "バリュー"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/README.adoc:24
