--- a/l10n/po/ja_JP/_versions/1.11/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/writing-extensions.adoc.po
@@ -374,6 +374,8 @@ msgid ""
 "@Dependent\n"
 "public class TracerConfiguration {\n"
 msgstr ""
+"@Dependent\n"
+"public class TracerConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:185
@@ -384,6 +386,10 @@ msgid ""
 "        return new Tracer(reporter, configuration);\n"
 "    }\n"
 msgstr ""
+"    @Produces\n"
+"    public Tracer tracer(Reporter reporter, Configuration configuration) {\n"
+"        return new Tracer(reporter, configuration);\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:191
@@ -395,6 +401,11 @@ msgid ""
 "        // create a Configuration\n"
 "    }\n"
 msgstr ""
+"    @Produces\n"
+"    @DefaultBean\n"
+"    public Configuration configuration() {\n"
+"        // create a Configuration\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:198
@@ -407,6 +418,12 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @Produces\n"
+"    @DefaultBean\n"
+"    public Reporter reporter(){\n"
+"        // create a Reporter\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:201
@@ -420,6 +437,8 @@ msgid ""
 "@Dependent\n"
 "public class CustomTracerConfiguration {\n"
 msgstr ""
+"@Dependent\n"
+"public class CustomTracerConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:213
@@ -431,6 +450,11 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @Produces\n"
+"    public Reporter reporter(){\n"
+"        // create a custom Reporter\n"
+"    }\n"
+"}\n"
 
 #. type: Title ====
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:215
