--- a/l10n/po/ja_JP/_versions/1.7/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/writing-extensions.adoc.po
@@ -369,6 +369,8 @@ msgid ""
 "@Dependent\n"
 "public class TracerConfiguration {\n"
 msgstr ""
+"@Dependent\n"
+"public class TracerConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:183
@@ -379,6 +381,10 @@ msgid ""
 "        return new Tracer(reporter, configuration);\n"
 "    }\n"
 msgstr ""
+"    @Produces\n"
+"    public Tracer tracer(Reporter reporter, Configuration configuration) {\n"
+"        return new Tracer(reporter, configuration);\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:189
@@ -390,6 +396,11 @@ msgid ""
 "        // create a Configuration\n"
 "    }\n"
 msgstr ""
+"    @Produces\n"
+"    @DefaultBean\n"
+"    public Configuration configuration() {\n"
+"        // create a Configuration\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:196
@@ -402,6 +413,12 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @Produces\n"
+"    @DefaultBean\n"
+"    public Reporter reporter(){\n"
+"        // create a Reporter\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:199
@@ -415,6 +432,8 @@ msgid ""
 "@Dependent\n"
 "public class CustomTracerConfiguration {\n"
 msgstr ""
+"@Dependent\n"
+"public class CustomTracerConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:211
@@ -426,6 +445,11 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @Produces\n"
+"    public Reporter reporter(){\n"
+"        // create a custom Reporter\n"
+"    }\n"
+"}\n"
 
 #. type: Title ====
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:213
