--- a/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
@@ -1045,6 +1045,23 @@ msgid ""
 "  </plugins>\n"
 "</build>\n"
 msgstr ""
+"<build>\n"
+"  <plugins>\n"
+"    <plugin>\n"
+"      <groupId>org.jboss.jandex</groupId>\n"
+"      <artifactId>jandex-maven-plugin</artifactId>\n"
+"      <version>1.0.7</version>\n"
+"      <executions>\n"
+"        <execution>\n"
+"          <id>make-index</id>\n"
+"          <goals>\n"
+"            <goal>jandex</goal>\n"
+"          </goals>\n"
+"        </execution>\n"
+"      </executions>\n"
+"    </plugin>\n"
+"  </plugins>\n"
+"</build>\n"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:564
