--- a/l10n/po/ja_JP/_versions/1.7/guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/neo4j.adoc.po
@@ -68,7 +68,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/neo4j.adoc:39
 #, no-wrap
 msgid "Programming model"
-msgstr ""
+msgstr "プログラミングモデル"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/neo4j.adoc:42
