Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
@@ -3882,7 +3882,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-all-build-items.adoc:1303
 #, no-wrap
 msgid "SmallRye OpenAPI"
-msgstr ""
+msgstr "SmallRye OpenAPI"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-all-build-items.adoc:1308
