Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 20:14+0000\n"
+"POT-Creation-Date: 2021-03-12 12:10+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -49,7 +49,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The rootPath under which queries will be served. Default to /graphql\n"
+"The rootPath under which queries will be served. Default to graphql By default, this value will be resolved as a path relative to `$++{++quarkus.http.root-path++}++`.\n"
 "--"
 msgstr ""
 
@@ -63,7 +63,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:20
 #, no-wrap
-msgid "`/graphql`"
+msgid "`graphql`"
 msgstr ""
 
 #. type: Table
@@ -169,7 +169,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The path where GraphQL UI is available. The value `/` is not allowed as it blocks the application from serving anything else.\n"
+"The path where GraphQL UI is available. The value `/` is not allowed as it blocks the application from serving anything else. By default, this URL will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`.\n"
 "--"
 msgstr ""
 
